# NATSpeech

./: pyproject.toml  requirements.txt
egs/datasets/audio/lj/: base_mel2wav.yaml  base_text2mel.yaml  fs2_orig.yaml
jobs/: fs2.sh
mfa_usr/: install_mfa.sh
